<resources>
    <string name="app_name">تأمین‌ من</string>
    <string name="empty_list">نتیجه‌ای یافت نشد</string>
    <string name="version_app">نسخه 0.0.5</string>
    <string name="welcome_to_app">به تأمین‌ من خوش آمدید</string>
    <string name="national_code">کد ملی</string>
    <string name="national_code_partner">کد ملی همسر</string>
    <string name="password">رمز عبور</string>
    <string name="please_fill_national_code_field">لطفا فیلد کد ملی را پر نمایید</string>
    <string name="please_enter_valid_national_code">لطفا کد ملی معتبر وارد نمایید</string>
    <string name="please_enter_valid_password">لطفا رمز عبور معتبر وارد نمایید</string>
    <string name="please_enter_valid_value">لطفا مقدار معتبر وارد نمایید</string>
    <string name="please_fill_password_field">لطفا فیلد رمز عبور را پر نمایید</string>
    <string name="please_fill_field">لطفا فیلد مورد نظر را پر نمایید</string>
    <string name="message_fill_all_inputs">لطفا همه فیلدها را پر کنید</string>
    <string name="please_enter_min_eight_character">لطفا حداقل هشت کاراکتر وارد نمایید</string>
    <string name="login_to_app">وارد حساب کاربری شوید\nورود متمرکز سازمان تأمین اجتماعی</string>
    <string name="have_account">حساب کاربری دارید؟</string>
    <string name="release">اپلیکیشن رسمی سازمان تأمین اجتماعی</string>
    <string name="eligibility_status_1">داشتن حداقل 10 سال سابقه پرداخت حق بیمه نزد سازمان تأمین اجتماعی</string>
    <string name="eligibility_status_2">حائز شرایط به دلیل سن کمتر از 50 سال</string>
    <string name="eligibility_status_3">داشتن 0 روز سابقه و… سن در زمان تقاضا</string>
    <string name="eligibility_status_4">داشتن حداکثر دو قرارداد حرف ومشاغل</string>
    <string name="eligibility_status_5">فاقد شرایط احراز سن و سابقه</string>
    <string name="register">ثبت‌نام</string>
    <string name="forget_password">فراموشی رمز عبور</string>
    <string name="eligibility_treatment">استعلام حمایت‌های درمانی</string>
    <string name="outpatient_services">این استعلام صرفاً شامل خدمات <b>غیر بستری</b> است </string>
    <string name="titile1420">سامانه ارتباطات و نظارت مردمی</string>
    <string name="description1420">ارتباط با 1420 سازمان تأمین‌ اجتماعی</string>
    <string name="explain_eligibility_treatment">استعلام حمایت‌های درمانی خدمات غیر بستری</string>
    <string name="inquiry_eligibility">استعلام استحقاق درمان</string>
    <string name="inquiry_foreign_nationals">استعلام اتباع خارجی</string>
    <string name="foreign_nationals_code">شناسه اتباع خارجی</string>
    <string name="explain_invalid_foreign_nationals_code">کد ملی یا شناسه اتباع نا معتبر می‌باشد</string>
    <string name="eligibility_result_correct">برخورداری از استحقاق درمان</string>
    <string name="eligibility_result_incorrect">عدم برخورداری از استحقاق درمان</string>
    <string name="understand">متوجه شدم</string>
    <string name="owner_id">دارنده</string>
    <string name="covered_eligibility_treatment"> تحت پوشش درمانی بیمه تأمین‌ اجتماعی می‌باشد.</string>
    <string name="not_covered_eligibility_treatment"> تحت پوشش درمانی بیمه تأمین‌ اجتماعی نمی‌باشد.</string>
    <string name="reference_code">کد پیگیری</string>
    <string name="contract_code">شماره قرارداد</string>
    <string name="last_seen_services">آخرین خدمات مشاهده شده</string>
    <string name="last_seen_services_description">خدمات الکترونیک پر استفاده‌ شما</string>
    <string name="menu_title_services">خانه</string>
    <string name="menu_title_my_tamin">کارتابل</string>
    <string name="menu_title_profile">حساب‌کاربری</string>
    <string name="message_search_service">جستجو</string>
    <string name="select_user_mode">لطفا نوع کاربری خود را انتخاب نمایید</string>
    <string name="ok">تایید</string>
    <string name="ok_and_continua">تایید و ادامه</string>
    <string name="label_ok_and_send">تایید و ارسال</string>
    <string name="cancel">انصراف</string>
    <string name="save">ذخیره</string>
    <string name="double_click_exit_message">برای خروج از نرم افزار دوباره کلیک کنید</string>
    <string name="label_status_guarantee">وضعیت ضمانت</string>
    <string name="label_bank">بانک/موسسه/نهاد</string>
    <string name="label_guid_title">راهنمای سرویس</string>
    <string name="label_branch_name_bank">نام شعبه بانک/موسسه/نهاد</string>
    <string name="label_amount_per_installment"> مبلغ هر قسط (ریال)</string>
    <string name="label_number_installments">تعداد اقساط</string>
    <string name="label_refund_amount">مبلغ بازپرداخت</string>
    <string name="label_guarantee_amount">مبلغ ضمانت</string>
    <string name="label_province_name">استان</string>
    <string name="label_city_name">شهر</string>
    <string name="issue_city">شهر محل صدور</string>
    <string name="label_request_certification">درخواست گواهی</string>
    <string name="label_registered_protests">اعتراض‌های ثبت شده</string>
    <string name="label_create_nonexistent_History">ایجاد سابقه ناموجود</string>
    <string name="add_new_person">اضافه کردن فرد جدید</string>
    <string name="new_feature">ویژگی های جدید</string>
    <string name="debug">رفع اشکال و بهینه سازی</string>
    <string name="version_name">نسخه %s</string>
    <string name="release_date">تاریخ انتشار: %s</string>
    <string name="label_NonExistentHistory">سوابق ناموجود</string>
    <string name="label_recive_info">اطلاعات دریافتی</string>
    <string name="label_final_approval">تایید نهایی و ثبت درخواست</string>
    <string name="label_loan_details">مشخصات وام</string>
    <string name="show_case">نمایش راهنما</string>
    <string name="minimum_500000_rials">حداقل 500,000 ریال</string>
    <string name="error_minimum_500000_rials"> مقدار ورودی کمتر از 500,000 ریال است</string>
    <string name="minimum_12_and_maximum_240">حداقل 12 و حداکثر 240</string>
    <string name="guarantee_amount_shouldnot_be_less_than_refund_amount">مبلغ ضمانت از مبلغ بازپرداخت نباید کمتر باشد</string>
    <string name="minimum_amount_is_not_observed">حداقل یا حداکثر مقادیر رعایت نشده است</string>
    <string name="error_input_first_name_not_valid">نام شامل کاراکتر غیر مجاز است</string>
    <string name="error_input_last_name_not_valid">نام خانوادگی شامل کاراکتر غیر مجاز است</string>
    <string name="error_input_is_branch_name_not_valid">نام شعبه شامل کاراکتر غیر مجاز است</string>
    <string name="error_input_is_address_not_valid">آدرس شامل کاراکتر غیر مجاز است</string>
    <string name="error_input_is_email_not_valid">ایمیل نامعتبر است</string>
    <string name="error_input_is_custom_not_valid">عبارت ورودی شامل کاراکتر غیر مجاز است</string>
    <string name="error_input_is_less_then_2">نام شعبه نمی تواند کمتر از دو کاراکتر باشد</string>
    <string name="error_select_date_birthday">لطفا تاریخ تولد را وارد نمایید</string>
    <string name="error_input_name">لطفا نام وام گیرنده را وارد نمایید</string>
    <string name="error_selected_pensioner_id">لطفا شماره مستمری را وارد نمایید</string>
    <string name="error_select_guarantee_Status">لطفا وضعیت ضمانت را مشخص نمایید</string>
    <string name="error_input_last_name">لطفا نام خانوادگی وام گیرنده را وارد نمایید</string>
    <string name="error_input_branch_name">لطفا نام شعبه را وارد نمایید</string>
    <string name="error_select_branch_name">لطفا شعبه مورد نظر را انتخاب نمایید</string>
    <string name="error_input_amount_per_installment">لطفا مبلغ هر قسط را وارد نمایید</string>
    <string name="error_input_number_installment">لطفا تعداد اقساط را وارد نمایید</string>
    <string name="error_input_refund_amount">لطفا مبلغ بازپرداخت را وارد نمایید</string>
    <string name="error_input_guarantee_amount">لطفا مبلغ ضمانت را وارد نمایید</string>
    <string name="error_select_prescription_date">لطفا تاریخ تجویز را وارد نمایید</string>
    <string name="error_select_insurance_user">لطفا کاربر بیمه شده را انتخاب نمایید</string>
    <string name="error_select_bank">لطفا بانک/موسسه/نهاد را انتخاب نمایید</string>
    <string name="label_details_records">جزئیات سوابق</string>
    <string name="label_inquire_pension">استعلام وضعیت مستمری</string>
    <string name="label_edited_workshop_year">سال‌های ویرایش شده</string>
    <string name="label_specifications_marriage">مشخصات ازدواج</string>
    <string name="label_specifications_ill_days">مشخصات ایام بیماری</string>
    <string name="label_pregnancy_days">مشخصات ایام بارداری</string>
    <string name="label_lists_request">لیست درخواست‌ها</string>
    <string name="label_details_history_desc">با انتخاب هر سال جزئیات سوابق به تفکیک ماه قابل مشاهده است.</string>
    <string name="label_details_inspection_preformed">در صورتیکه در بازرسی‌های انجام شده از کارگاه محل اشتغال ،شماره بیمه شما ثبت شده باشد، میتوانید از این فرم جهت مشاهده بازرسی استفاده نمایید.</string>
    <string name="label_details_objection_history_desc">با انتخاب هر سال جزئیات سوابق به تفکیک ماه قابل مشاهده بوده و امکان ثبت اعتراض و درج سوابق صحیح فراهم می‌باشد.</string>
    <string name="label_details_wage_and_history_desc">با انتخاب هر سال جزئیات سوابق و دستمزد به تفکیک ماه قابل مشاهده است.</string>
    <string name="label_request_details">مشخصات درخواست</string>
    <string name="covered_person">افراد تحت پوشش</string>
    <string name="label_calculate_marriage_allowance">محاسبه مبلغ کمک هزینه ازدواج</string>
    <string name="label_calculate_ill_wage">محاسبه مبلغ غرامت دستمزد ایام بیماری</string>
    <string name="workshop_information">اطلاعات کارگاه</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="label_insurance_number">شماره بیمه</string>
    <string name="label_date_from">از تاریخ</string>
    <string name="label_date_to">تا تاریخ</string>
    <string name="label_workshop_name">نام کارگاه</string>
    <string name="label_employer_name">نام کارفرما</string>
    <string name="birthdate">تاریخ تولد</string>
    <string name="label_start_date">تاریخ شروع</string>
    <string name="label_end_date">تاریخ پایان</string>
    <string name="birth_city">شهر محل تولد</string>
    <string name="label_national_code">کد ملی</string>
    <string name="label_job">شغل</string>
    <string name="insurance_branch">شعبه بیمه پردازی</string>
    <string name="label_workshop_code">کد کارگاه</string>
    <string name="label_workshop_address">آدرس کارگاه</string>
    <string name="label_branch_of_tamin">شعبه تأمین‌ اجتماعی</string>
    <string name="label_phone_workshop">تلفن کارگاه</string>
    <string name="label_insured_title">عنوان شغل بیمه شده</string>
    <string name="label_step4_contract"> اطلاعات کاربر</string>
    <string name="ok_and_continue">تایید و ادامه</string>
    <string name="menu_title_treatment">درمان</string>
    <string name="label_job_start_date">تاریخ شروع به کار</string>
    <string name="info_new_dependent">اطلاعات تبعی جدید</string>
    <string name="desc_rules_pension_survivor">
        "اینجانب %s %s با آگاهی کامل و در صحت عقلی، شرایط و مقررات فوق را مطالعه و خود را ملزم به رعایت آن می‌دانم در غیر
        اینصورت کلیه تبعات و مسئولیت های آن متوجه اینجانب بوده و سازمان تأمین‌ اجتماعی در این خصوص مسئولیتی نخواهد داشت.</string>
    <string name="show_medical_commission">مشاهده رای کمیسیون پزشکی</string>
    <string name="show_commission">مشاهده رای</string>
    <string name="have_not_objection_medical_commission">به رای کمیسیون پزشکی اعتراضی ندارم.</string>
    <string name="have_objection_medical_commission">به رای کمیسیون پزشکی اعتراضی دارم.</string>
    <string name="label_tech_skill_number">شماره کارت مهارت فنی</string>
    <string name="label_tech_skill_date">تاریخ صدور کارت مهارت فنی</string>
    <string name="final_submit_request">ثبت نهایی درخواست</string>
    <string name="final_submit">ثبت نهایی</string>
    <string name="show_survivor_form">مشاهده فرم درخواست بازماندگان</string>
    <string name="desc_objection_medicalCommission">جهت ثبت <font color='#ff8f00'> اعتراض به کمیسیون پزشکی </font> لطفا به سایت https://eservices.tamin.ir قسمت مستمری بگیران -> مستمری ازکارافتادگی مراجعه نمایید.</string>
    <string name="show_registered_requests">نمایش درخواست‌ها</string>
</resources>