<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <com.tamin.taminhamrah.utils.stepperView.VerticalStepperItemView
        android:id="@+id/stepperUploadDoc"
        style="@style/VerticalStepperItemView"
        app:nextStepTitle="@string/ok_and_continue"
        app:step_index="2"
        app:step_state="normal"
        tools:step_state="selected"
        app:step_title="@string/workshop_information">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
           >

            <com.tamin.taminhamrah.widget.edittext.string.EditTextString
                android:id="@+id/inputWorkShopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editText_hint="@string/label_workshop_name"
                app:type="custom" />

            <com.tamin.taminhamrah.widget.edittext.number.EditTextNumber
                android:id="@+id/inputWorkShopCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editText_hint="@string/label_workshop_code"
                app:editText_max_len="20" />

            <com.tamin.taminhamrah.widget.edittext.string.EditTextString
                android:id="@+id/inputEmployerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editText_hint="@string/label_employer_name" />

            <com.tamin.taminhamrah.widget.edittext.SelectableItemView
                android:id="@+id/inputBranchName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editText_hint="@string/label_branch_of_tamin" />

            <com.tamin.taminhamrah.widget.edittext.number.EditTextNumber
                android:id="@+id/inputWorkShopPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editText_hint="@string/label_phone_workshop"
                app:editText_max_len="11" />

            <com.tamin.taminhamrah.widget.edittext.SelectableItemView
                android:id="@+id/selectInsuredJobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editText_hint="@string/label_insured_title" />

            <com.tamin.taminhamrah.widget.DatePickerWidget
                android:id="@+id/widgetDatePickerStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:date_piker_hint="@string/label_date_from"/>

            <com.tamin.taminhamrah.widget.DatePickerWidget
                android:id="@+id/widgetDatePickerEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:date_piker_hint="@string/label_date_to"/>

            <com.tamin.taminhamrah.widget.edittext.string.EditTextString
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editText_hint="@string/label_workshop_address"
                app:type="address" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:flow_verticalGap="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:constraint_referenced_ids="inputWorkShopName,inputWorkShopCode,inputEmployerName,inputBranchName,inputWorkShopPhoneNumber,selectInsuredJobTitle,widgetDatePickerStartDate,widgetDatePickerEndDate,inputAddress" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.tamin.taminhamrah.utils.stepperView.VerticalStepperItemView>
</layout>
