<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.tamin.taminhamrah.utils.stepperView.VerticalStepperItemView
        android:id="@+id/stepperDependentInfo"
        style="@style/VerticalStepperItemView"
        app:step_index="2"
        app:step_state="normal"
        app:step_title="@string/info_new_dependent"
        tools:step_state="selected">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <com.tamin.taminhamrah.widget.edittext.SelectableItemView
                android:id="@+id/selectCityBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editText_hint="@string/birth_city" />

            <com.tamin.taminhamrah.widget.edittext.SelectableItemView
                android:id="@+id/selectCityIssuance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:editText_hint="@string/issue_city" />

            <com.tamin.taminhamrah.widget.edittext.SelectableItemView
                android:id="@+id/selectLastBranch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:editText_hint="@string/insurance_branch" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.tamin.taminhamrah.utils.stepperView.VerticalStepperItemView>
</layout>
