<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.tamin.taminhamrah.utils.stepperView.VerticalStepperItemView
        android:id="@+id/stepperUserInfo"
        style="@style/VerticalStepperItemView"
        app:layout_constraintTop_toBottomOf="@+id/stepperRules"
        app:previousStepVisible="false"
        app:step_index="1"
        app:step_title="@string/label_step4_contract"
        app:step_state="selected"
        android:paddingTop="@dimen/_12sdp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">


            <include
                android:id="@+id/ItemDesc1"
                layout="@layout/item_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:item='@{@string/label_insured_registration_des_1}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone"/>

            <com.tamin.taminhamrah.widget.edittext.string.EditTextString
                android:id="@+id/inputName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:editText_hint="@string/first_name"
                app:editText_max_len="50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ItemDesc1"
                android:layout_marginTop="@dimen/_5sdp"
               />

            <com.tamin.taminhamrah.widget.edittext.string.EditTextString
                android:id="@+id/inputLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:editText_hint="@string/last_name"
                app:editText_max_len="50"
                app:layout_constraintStart_toStartOf="@id/inputName"
                app:layout_constraintEnd_toEndOf="@id/inputName"
                app:layout_constraintTop_toBottomOf="@id/inputName"
                android:layout_marginTop="@dimen/_5sdp"
                />

            <com.tamin.taminhamrah.widget.edittext.number.EditTextNumber
                android:id="@+id/inputNationalId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:editText_hint="@string/label_national_code"
                app:editText_max_len="10"
                app:layout_constraintTop_toBottomOf="@id/inputLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
               />

            <com.tamin.taminhamrah.widget.DatePickerWidget
                android:id="@+id/widgetBirthDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:date_piker_hint="@string/birthdate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/inputNationalId" />


            <com.tamin.taminhamrah.widget.edittext.SelectableItemView
                android:id="@+id/selectCityOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"

                android:visibility="visible"
                app:editText_hint="@string/birth_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/widgetBirthDate" />

            <com.tamin.taminhamrah.widget.edittext.SelectableItemView
                android:id="@+id/selectCityOfIssue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="@dimen/_5sdp"
                app:editText_hint="@string/issue_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectCityOfBirth" />


            <com.tamin.taminhamrah.widget.edittext.SelectableItemView
                android:id="@+id/selectJob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:editText_hint="@string/label_job"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectCityOfIssue" />

            <com.tamin.taminhamrah.widget.DatePickerWidget
                android:id="@+id/widgetJobStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:date_piker_hint="@string/label_job_start_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectJob"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.tamin.taminhamrah.utils.stepperView.VerticalStepperItemView>

</layout>