<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.tamin.taminhamrah.utils.stepperView.VerticalStepperItemView
        android:id="@+id/medicalCommissionStepper"
        style="@style/VerticalStepperItemView"
        app:step_index="6"
        app:step_state="normal"
        app:step_title="@string/show_medical_commission"
        app:nextStepEnable="false"
        tools:step_state="selected">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnShowPdf"
                    style="@style/TextButtonBordered.Blue.Light"
                    android:layout_width="0dp"
                    android:text="@string/show_commission"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btnShowRegisterRequests"
                    app:layout_constraintWidth_percent="0.48" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnShowRegisterRequests"
                    style="@style/TextButtonBordered.Blue.Light"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/show_registered_requests"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.48" />

                <RadioGroup
                    android:id="@+id/rgObjection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/btnShowPdf">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbNoObjection"
                        style="@style/TextStyle.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/have_not_objection_medical_commission" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbObjection"
                        style="@style/TextStyle.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/have_objection_medical_commission" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDescObjectMedical"
                    style="@style/TextStyle.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:background="?attr/colorSurfaceContainerHigh"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="@string/desc_objection_medicalCommission"
                    app:layout_constraintTop_toBottomOf="@+id/rgObjection" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </com.tamin.taminhamrah.utils.stepperView.VerticalStepperItemView>
</layout>